# OPUS-MAGNUM

./: .gitignore  README.md
examples/: footcovert.cpp  numericlimits.cpp  oddnumber.cpp  types.cpp  whilestatment.cpp
examples/GLFW/GLFW/: CMakeLists.txt  main.h
examples/GLFW/GLFW + VSC + IMGUI - Drawing app/GLFW_VSC/: GLFW_VSC.sln  glad.c  main.cpp
examples/GLFW/GLFW + VSC + IMGUI/GLFW_VSC/: GLFW_VSC.vcxproj  GLFW_VSC.vcxproj.filters  imgui.ini
examples/GLFW/GLFW + VSC + IMGUI/GLFW_VSC/Libraries/include/glad/: glad.h
examples/GLFW/GLFW + VSC/GLFW_VSC/: GLFW_VSC.vcxproj
examples/QT/QT/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  secondwindow.cpp  secondwindow.h
examples/basics/: arraysmerge.cpp  asciivalueofchar.cpp  helloword.cpp  ifstatment.cpp  maxvalues.cpp  overloadingfunc.cpp  sizesof.cpp  types.cpp
leetcode/: TwoSums_1
